fix(global): adjust images and dark mode

--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -1,4 +1,4 @@
-  #hide-checkbox {
+  #dark-checkbox {
     opacity: 0;
     height: 0;
     width: 0;
@@ -181,27 +181,27 @@
     }
   }
   
-  #hide-checkbox:checked + .toggle {
+  #dark-checkbox:checked + .toggle {
     background: #24d7f7;
   }
   
-  #hide-checkbox:checked + .toggle .toggle-button {
+  #dark-checkbox:checked + .toggle .toggle-button {
     background: #f7ffff;
     transform: translateX(51px);
     box-shadow: 0 0 35px 5px rgba(255, 255, 255);
   }
   
-  #hide-checkbox:checked + .toggle .toggle-button .crater {
+  #dark-checkbox:checked + .toggle .toggle-button .crater {
     transform: rotate(-45deg) translateX(70px);
   }
   
-  #hide-checkbox:checked + .toggle .star {
+  #dark-checkbox:checked + .toggle .star {
     animation: shake 20s infinite;
     transform: none;
     box-shadow: none;
   }
   
-  #hide-checkbox:checked + .toggle .star-1 {
+  #dark-checkbox:checked + .toggle .star-1 {
     width: 20px;
     height: 5px;
     border-radius: 10px;
@@ -211,7 +211,7 @@
     box-shadow: none;
   }
   
-  #hide-checkbox:checked + .toggle .star-2 {
+  #dark-checkbox:checked + .toggle .star-2 {
     width: 6px;
     height: 6px;
     background: #fff;
@@ -220,7 +220,7 @@
     box-shadow: -1px 0 2px 0 rgba(0, 0, 0, 0.1);
   }
   
-  #hide-checkbox:checked + .toggle .star-3 {
+  #dark-checkbox:checked + .toggle .star-3 {
     width: 8px;
     height: 8px;
     background: #fff;
@@ -229,7 +229,7 @@
     box-shadow: -1px 0 2px 0 rgba(0, 0, 0, 0.1);
   }
   
-  #hide-checkbox:checked + .toggle .star-4 {
+  #dark-checkbox:checked + .toggle .star-4 {
     width: 7px;
     height: 7px;
     background: #fff;
@@ -238,7 +238,7 @@
     box-shadow: -1px 0 2px 0 rgba(0, 0, 0, 0.1);
   }
   
-  #hide-checkbox:checked + .toggle .star-5 {
+  #dark-checkbox:checked + .toggle .star-5 {
     width: 30px;
     height: 7.5px;
     border-radius: 15px;
@@ -248,7 +248,7 @@
     box-shadow: none;
   }
   
-  #hide-checkbox:checked + .toggle .star-6 {
+  #dark-checkbox:checked + .toggle .star-6 {
     width: 9px;
     height: 9px;
     background: #fff;
@@ -258,7 +258,7 @@
     box-shadow: -1px 0 2px 0 rgba(0, 0, 0, 0.1);
   }
   
-  #hide-checkbox:checked + .toggle .star-7 {
+  #dark-checkbox:checked + .toggle .star-7 {
     width: 12px;
     height: 12px;
     background: #fff;
@@ -268,7 +268,7 @@
     box-shadow: -1px 0 2px 0 rgba(0, 0, 0, 0.1);
   }
   
-  #hide-checkbox:checked + .toggle .star-8 {
+  #dark-checkbox:checked + .toggle .star-8 {
     width: 10.5px;
     height: 10.5px;
     background: #fff;
@@ -327,7 +327,7 @@
 
 /* ######## CSS DARK ####### */
 .light .bg-cod-gray{
-    background-color: rgb(43, 255, 0) !important;
+    background-color: #faf6f3 !important;
 }
 .light .bg-black{
   background-color: #e67e22 !important;
